--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 			"email": "alikdex@gmail.com"
 		}
 	],
-	"minimum-stability": "1.0.0",
+	"minimum-stability": "dev",
 	"autoload": {
 		"psr-4": {
 			"alikdex\\toastr\\": ""
